# CRUD_FastAPI

./: main.py  models.py  pyproject.toml  schemas.py  settings.py
migrations/: env.py
migrations/versions/: bbb9f55f15e2_create_users_table.py
